# momentum-feedstock

./: README.md  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_.yaml  linux_64_c_compiler_version13cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13numpy2.0python3.10.____cpython.yaml  linux_64_c_compiler_version13cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13numpy2.0python3.11.____cpython.yaml  linux_64_c_compiler_version13cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13numpy2.0python3.12.____cpython.yaml  linux_64_c_compiler_version13cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13numpy2python3.13.____cp313.yaml  linux_64_c_compiler_version13cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13python3.10.____cpython.yaml  linux_64_c_compiler_version13cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13python3.11.____cpython.yaml  linux_64_c_compiler_version13cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13python3.12.____cpython.yaml  linux_64_c_compiler_version13cuda_compiler_version12.6cxx_compiler_version13.yaml  linux_64_c_compiler_version13cuda_compiler_versionNonecxx_compiler_version13.yaml  linux_64_c_compiler_version13cuda_compilercuda-nvcccuda_compiler_version12.6cxx_compiler_version13numpy2.0python3.10.____cpython.yaml  linux_64_cuda_compilerNonecuda_compiler_versionNonecxx_compiler_version13python3.10.____cpython.yaml  (+106 more)
recipe/tests/: CMakeLists.txt  main.cpp
(+27 files in other folders)
